# bol-rss-notifier

./: .gitignore  pyproject.toml  requirements.txt
src/bol_feed/: __init__.py
src/bol_feed/core/: parser.py  settings.py  types.py
src/bol_feed/models/: __init__.py  feed_item_model.py
src/bol_feed/scripts/: process_feed.py
