[project]
name = "bol_rss_feed"
version = "0.0.1"
description = "Bol.com RSS feed notifier"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Dave van Rijn Development", email = "develop@davevanrijn.nl" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
process_feed = "bol_feed.scripts.process_feed:run"

[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"